--- a/frontend/web/manifest.json
+++ b/frontend/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "flutter_application_1",
-    "short_name": "flutter_application_1",
+    "name": "sharing_ativities",
+    "short_name": "sharing_ativities",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
