--- a/frontend/windows/runner/Runner.rc
+++ b/frontend/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "flutter_application_1" "\0"
+            VALUE "FileDescription", "sharing_ativities" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "flutter_application_1" "\0"
+            VALUE "InternalName", "sharing_ativities" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "flutter_application_1.exe" "\0"
-            VALUE "ProductName", "flutter_application_1" "\0"
+            VALUE "OriginalFilename", "sharing_ativities.exe" "\0"
+            VALUE "ProductName", "sharing_ativities" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
